# bevy_megaui_web_showcase

./: Cargo.toml  README.md  index.html
.github/workflows/: gh-pages.yml
pkg/: bevy_megaui_web_showcase.d.ts  bevy_megaui_web_showcase.js  bevy_megaui_web_showcase_bg.wasm.d.ts  package.json
src/: lib.rs
